<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:transitionName="RegistrationFragment">

    <ImageView
        android:id="@+id/back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/ic_arrow_left" />

    <TextView
        android:id="@+id/chat_"
        android:layout_width="380dp"
        android:layout_height="28dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:text="@string/reg_text"
        android:textAppearance="@style/main_black"
        android:gravity="center_horizontal|top"
        android:fontFamily="@font/montserrat_bold"
        />

    <RelativeLayout
        android:id="@+id/frame_1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/frame"
        android:clipToOutline="true" />

    <TextView
        android:id="@+id/some_id"
        android:layout_width="280dp"
        android:layout_height="37dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="280dp"
        android:text="@string/hint_registration"
        android:textAppearance="@style/chat_text"
        android:gravity="center_horizontal|top"
        />


    <View
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="320dp"
        android:background="@drawable/rectangle_round20"
        />

    <EditText
        android:id="@+id/mail_enter"
        android:layout_width="226dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="76dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="320dp"
        android:hint="@string/mail_enter"
        android:textAppearance="@style/chat_text"
        android:gravity="center_vertical"
        />

    <View
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="380dp"
        android:background="@drawable/rectangle_round20"
        />

    <EditText
        android:id="@+id/nick_enter"
        android:layout_width="226dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="76dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="380dp"
        android:hint="@string/nick_enter"
        android:maxLength="16"
        android:textAppearance="@style/chat_text"
        android:gravity="center_vertical"
        />

    <View
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="440dp"
        android:background="@drawable/rectangle_round20"
        />

    <EditText
        android:id="@+id/password_enter"
        android:layout_width="226dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="76dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="440dp"
        android:hint="@string/password_enter"
        android:inputType="textPassword"
        android:textAppearance="@style/chat_text"
        android:gravity="center_vertical"
        />

    <View
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="500dp"
        android:background="@drawable/rectangle_round20"
        />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="226dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="76dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="500dp"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:textAppearance="@style/chat_text"
        android:gravity="center_vertical"
        />

    <Button
        android:id="@+id/register"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="580dp"
        android:background="@drawable/rectangle_fill20"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/registration"
        android:textColor="@color/white"/>

</RelativeLayout>