<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <View
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/rectangle"
        />

    <TextView
        android:id="@+id/chat"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/chat"
        android:textAppearance="@style/chat"
        android:fontFamily="@font/montserrat_bold"/>

    <View
        android:id="@+id/search_bar"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="75dp"
        android:background="@drawable/rectangle_round" />

    <EditText
        android:id="@+id/find_user"
        android:layout_width="320dp"
        android:layout_height="12dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="85dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:hint="@string/find"
        android:maxLength="16"
        android:textAppearance="@style/chat_text" />

    <ImageButton
        android:id="@+id/avatar_open"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="330dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/image_send"
        android:clipToOutline="true" />

    <TextView
        android:id="@+id/messages"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="110dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center_vertical"
        android:text="@string/messages"
        android:textAppearance="@style/main_blue" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/messages"
        android:layout_marginTop="5dp" />



</RelativeLayout>